feat: apply `java-library` plugin instead of `java`